Refactor: complete Spring project cleanup, extract constants and fix entity versions